objects/Repossession__c.object
<CustomObject>
    <fields>
        <fullName>Proposed_Notice_Date_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Checkbox to suppress recalculation of proposed notice date if the user has overridden it. Set by RL Set Proposed Notice Date Override workflow and unset in triggered flow wait action.</description>
        <label>Proposed Notice Date Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Notice_Date__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Calculated date to print on letter. Usually today&apos;s date, but may be advanced to next business day by code if mailing cutoff time has passed. Mailing cutoff times are specified in RL_Mail_Cutoff... custom labels.</description>
        <label>Proposed Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RL_InstallmentPastDue_Tranformed__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Past due amount from financial account and 0, if null.</description>
        <formula>IF( Financial_Account__r.Payment_Amount_Past_Due__c == null, 0, Financial_Account__r.Payment_Amount_Past_Due__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RL InstallmentPastDue Tranformed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_IsContractReinstatedBefore__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to transform to true the user&apos;s picklist choice for reinstatement denial reason due to reinstatement within last 12 months or twice in the total term. Sends the expected value to Adobe Forms processing.</description>
        <formula>ISPICKVAL(Reinstatement_Denial_Reason__c, &quot;Reinstated 1x Last 12 Mos / 2x in Term&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Contract Reinstated Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_NumberOfDaysToSell__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to represent the number of days TFS is waiting to sell the car as required on some forms. Sends the expected value to Adobe Forms processing.</description>
        <formula>Proposed_Legal_Sale_Date__c - Proposed_Notice_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Days To Sell</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_OtherReasonForRepossession__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to transform user&apos;s picklist choice for reinstatement denial reason from a shortened value to the full text. Sends the expected value to Adobe Forms processing.</description>
        <formula>CASE(TEXT(Reinstatement_Denial_Reason__c),
&quot;False Information&quot;, &quot;The buyer, or any other person liable on the contract, intentionally provided false or misleading information of material importance on the credit application.&quot;,
&quot;Concealed Vehicle&quot;, &quot;The buyer, any other person liable on the contract, or any permissive user, concealed the vehicle or removed it from the state to avoid repossession.&quot;,
&quot;Acts of Destruction&quot;, &quot;The buyer, any other person liable on the contract, or any permissive user, committed or threatened to commit acts of destruction, or failed to take care of the vehicle in a reasonable manner resulting in substantial impairment of the value of the vehicle.&quot;,
&quot;Acts of Violence&quot;, &quot;The buyer, or any other person liable on the contract, threatened to commit, attempted to commit, or committed criminal acts of violence or bodily harm against one of our agents, employees, or officers in connection with our efforts to repossess the vehicle.&quot;,
&quot;Commission of Crime&quot;, &quot;The buyer knowingly used, or permitted the vehicle to be used, in the commission of a criminal offense (other than an infraction), which resulted in the seizure of the vehicle by a federal, state or local agency.&quot;,
&quot;Seizure&quot;, &quot;The vehicle was seized by a federal, state, or local agency and the seizing agency prohibits the return of the motor vehicle to, or otherwise effects or requires the termination of the property rights in the motor vehicle of, the buyer or other person liable on the contract or any third person claiming the motor vehicle by or through them.&quot;,
&quot;Bankruptcy Discharge&quot;, &quot;The buyer&apos;s debt and contract have been discharged in bankruptcy.&quot;,
&quot;Bankruptcy Discharge - Filing Parties Only&quot;,&quot;The buyer&apos;s debt and contract have been discharged in bankruptcy.&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Reason For Repossession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_TotalPurchaseAmountOfLeaseVehicle__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field to calculate the total redemption value of a lease.</description>
        <formula>UnpaidGrossBalance__c + Repossession_Costs__c + Impound_Fee__c + IF(State_of_Jurisdiction__c != &quot;CT&quot;, United_Road_Transport_Fees__c, 0) + IF(ISNULL(Sales_Tax_for_Form__c), 0, Sales_Tax_for_Form__c) + Other_Charges1__c + Other_Charges2__c + Financial_Account__r.Security_Deposit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Purchase Amount Of Lease Vehicle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RL_TypeOfSale__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field to send constant value of &quot;Private&quot; for sale type to Adobe Forms Service since public sales are never used by TFS.</description>
        <formula>&apos;Private&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Sale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_Vehicle_Year__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Integer value of the vehicle year from Collateral</description>
        <formula>VALUE(Case__r.Financial_Account__r.Collateral__r.Model_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RL Vehicle Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_evaluate_State_of_Jurisdiction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Checkbox used to kickoff RL Set State Conditions flow and re-evaluate initial values to possibly reassign state/form used, required notice date, etc. Frequently used when iRepo data is missing, invalid, or incomplete and manual corrections are used. Only visible when the record type is set to RL Manual Entry.</description>
        <label>Re-evaluate State of Jurisdiction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonForRepossession__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Constant value of true to provide source for form field (RL_IsFailureToMakePayment__c) that doesn&apos;t change. Currently only applies to 4015IL form.</description>
        <formula>True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason For Repossession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recorded_Legal_Sale_Date__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Updated from proposed legal sale date when rights letter is generated. Will reflect the date from the latest generated notice.</description>
        <label>Recorded Legal Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recorded_Notice_Date__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Updated from proposed notice date when rights letter is generated. Will reflect the date from the latest generated notice. Note that code may not have been implemented to copy latest date and ticket required to address the issue, if desired. Business decision not to implement at go-live.</description>
        <label>Recorded Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Redemption_Processing_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: An additional fee charged by repossession agencies when processing a possible redemption request.</description>
        <label>Redemption Processing Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reinst_List_Not_CA_or_Not_Std_Transport__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field used in soft validation rules to drive logic based on reinstatement list rules. If an account is on the reinstatement list, then transport fees may not apply except in the case of CA or if a non-standard transportation type is indicated by iRepo.</description>
        <formula>Financial_Account__r.Collection_List_Number_1__c = &quot;1812&quot; &amp;&amp; !ISPICKVAL(iRepo_RepoState__c, &quot;CA&quot;) || !ISPICKVAL(Transportation_Type__c, &quot;Standard&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reinst List Not CA or Not Std Transport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Allowed__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field used to indicate whether reinstatement rights should be offered to borrower. Primarily determined by form rule setting where reinstatement rights are mandatory or never offered. If it is conditional, the user has a picklist to indicate whether reinstatement is offered or not.</description>
        <formula>IF(Case(Case__r.Form_Rule__r.Reinstatement_Rights__c,
&quot;Yes&quot;, 1,
&quot;No&quot;, 0,
&quot;Conditional&quot;, IF(ISPICKVAL(Conditional_Reinstatement__c, &quot;Yes&quot;), 1, 0),
0
) = 1,
True,
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reinstatement Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Denial_Reason__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: When optional reinstatement rights are denied, this picklist provides the abbreviated version of the denial reason for the user to select.</description>
        <label>Reinstatement Denial Reason</label>
        <picklist>
            <controllingField>Conditional_Reinstatement__c</controllingField>
            <picklistValues>
                <fullName>Reinstated 1x Last 12 Mos / 2x in Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concealed Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acts of Destruction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acts of Violence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission of Crime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seizure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy Discharge - Filing Parties Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RepoLocationName__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Used to validate logic which drives individual vehicle location information to send to Adobe Forms Service. Not used or displayed in production.</description>
        <formula>IF(Financial_Account__r.Collection_List_Number_1__c = &quot;1812&quot; &amp;&amp; !ISPICKVAL(iRepo_RepoState__c, &quot;CA&quot;),

Repo_Agency_Name__c &amp; &quot;, &quot; &amp; Repo_Agency_Street1__c &amp; &quot;, &quot; &amp; IF(!ISBLANK(Repo_Agency_Street2__c), Repo_Agency_Street2__c &amp; &quot;, &quot;, &quot;&quot;) &amp; Repo_Agency_City__c &amp; &quot;, &quot; &amp; TEXT(Repo_Agency_State__c) &amp; &quot; &quot; &amp; Repo_Agency_Zip__c,

Auction_Agency_Name__c &amp; &quot;, &quot; &amp; Auction_Agency_Street1__c &amp; &quot;, &quot; &amp; IF(!ISBLANK(Auction_Agency_Street2__c), Auction_Agency_Street2__c &amp; &quot;, &quot;, &quot;&quot;) &amp; Auction_Agency_City__c &amp; &quot;, &quot; &amp; TEXT(Auction_Agency_State__c) &amp; &quot; &quot; &amp; Auction_Agency_Zip__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Agency_City__c</fullName>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: The city of the repossession agency as provided by iRepo.</description>
        <label>Repo Agency City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Agency_Name__c</fullName>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: The name of the repossession agency as provided by iRepo.</description>
        <label>Repo Agency Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Agency_Phone__c</fullName>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: The phone number of the repossession agency as provided by iRepo.</description>
        <label>Repo Agency Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Repo_Agency_State__c</fullName>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: The state of the repossession agency as provided by iRepo.</description>
        <label>Repo Agency State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repo_Agency_Street1__c</fullName>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: The first line of the street address of the repossession agency as provided by iRepo.</description>
        <label>Repo Agency Street1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Agency_Street2__c</fullName>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: The second line of the street address of the repossession agency as provided by iRepo.</description>
        <label>Repo Agency Street2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Agency_Zip_Ext__c</fullName>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: The zip code extension of the repossession agency as provided by iRepo. Not currently mapped in the integration.</description>
        <label>Repo Agency Zip Ext</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repo_Agency_Zip__c</fullName>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: The zip code of the repossession agency as provided by iRepo.</description>
        <label>Repo Agency Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repossession_Costs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: iRepo 
INT: iRepo M2/NOI template data 
Trans: N 
BU: RL 
FD: The primary fees associated with the process of repossession and charged by the repossession agency as provided by iRepo.</description>
        <label>Repossession Costs</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Zip_Code__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Defaults to 5+4 zip code from primary borrower. User may correct, if needed. Zip code is passed to Vertex for sales tax calculation.</description>
        <label>Sales Tax Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: Vertex 
INT: Vertex Tax Service 
Trans: N 
BU: RL 
FD: Sales tax amount for lease sales. Applies in some states to transfer ownership from TFS to lessee upon redemption. User clicks Vertex button and total sale price is provided to Vertex along with zip code. Vertex provides tax amount in response.</description>
        <label>Sales Tax</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_for_Form__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field applies sales tax for states where applicable and nulls it out when it doesn&apos;t apply.</description>
        <formula>IF(
CASE(State_of_Jurisdiction__c,
&quot;AL&quot;, 1,
&quot;AZ&quot;, 1,
&quot;CT&quot;, 1,
&quot;ID&quot;, 1,
&quot;IL&quot;, 1,
&quot;MI&quot;, 1,
&quot;NV&quot;, 1,
&quot;NJ&quot;, 1,
&quot;NY&quot;, 1,
&quot;OH&quot;, 1,
&quot;TN&quot;, 1,
&quot;WA&quot;, 1,
0
) &gt; 0,
Sales_Tax__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax for Form</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salvage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Indicates whether the vehicle has been sufficiently damaged to disqualify it from the standard auction process. User checks the box after reviewing the damage details provided by the repo and/or auction agencies.</description>
        <label>Salvage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Contracts__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Picklist for user to indicate whether there are any additional service contracts / insurance products sold with the vehicle which may drive refunds to the customer.</description>
        <label>Service Contracts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Level_Bucket__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field to drive reporting buckets in Repossession Aging report.</description>
        <formula>CASE(Case__r.Form_Rule__r.Notice_Calendar__c,

&quot;Business&quot;, IF(Case__r.Form_Rule__r.Time_Till_Notice__c &lt; 5, &quot;3 Days&quot;, &quot;5 Days&quot;),

&quot;Calendar&quot;, IF(Case__r.Form_Rule__r.Time_Till_Notice__c &lt; 7, &quot;3 Days&quot;, IF(Case__r.Form_Rule__r.Time_Till_Notice__c = 60, &quot;CA Retail 5 Days&quot;, &quot;5 Days&quot;)),

&quot;&quot;, &quot;Unassigned&quot;,

&quot;3 Days&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Level Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Name__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Constant value of &quot;SFDC&quot; to feed into Adobe Forms System.</description>
        <formula>&apos;SFDC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source System Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Handling__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Images &amp; text to guide the associate for special circumstances: 
(1) Verify Host Data: when FA last modified &lt; 10 PM Pacific prior day on Tu-Sa or Fri on Su-Mo accounting for daylight savings to calculate when 10 PM Pacific occurs in GMT or when last modified by is not ETL User 
(2) Fraud: when collection list is one of the fraud list numbers 
(3) Active BK: when the bankruptcy flag is one of the active BK flags 
(4) Discharged BK: when the bankruptcy flag is one of the discharged BK flags 
(5) Not Owner: when parent case isn&apos;t owned by the current user 
(6) Account Termed: financial account status is closed</description>
        <formula>IF( 
Financial_Account__r.LastModifiedDate &lt; 
DATETIMEVALUE( 
TEXT(TODAY() - IF(MOD(TODAY() - DATE(1900, 1, 7), 7) &gt; 1, 0, IF(MOD(TODAY() - DATE(1900, 1, 7), 7) = 1, 2, 1))) 
&amp; 
IF (TODAY() &gt;= 
DATE(YEAR(TODAY()),3,1) 
+ 
( 
14- 
CASE(MOD(DATE(YEAR(TODAY()),3,1) - DATE(1900,1,7),7), 
0,7,MOD(DATE(YEAR(TODAY()),3,1) - DATE(1900,1,7),7)) 
) 
&amp;&amp; 
TODAY() &lt; 
DATE(YEAR(TODAY()),11,1) 
+ 
( 
7- 
CASE(MOD(DATE(YEAR(TODAY()),11,1) - DATE(1900,1,7),7), 
0,7,MOD(DATE(YEAR(TODAY()),11,1) - DATE(1900,1,7),7)) 
), 
&quot; 05:00:00&quot;, 
&quot; 06:00:00&quot; 
) 
) || 
Financial_Account__r.LastModifiedBy.FirstName &amp; Financial_Account__r.LastModifiedBy.LastName &lt;&gt; &quot;ETLUser&quot;, 
IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002E3dT&amp;oid=00D1b000000CnQW&quot;, &quot;Verify Host Data&quot;) &amp; &quot; &quot;, &quot;&quot;) 

&amp; 

IF(Financial_Account__r.Collection_List_Number_1__c = &quot;1074&quot; || Financial_Account__r.Collection_List_Number_1__c = &quot;1075&quot; || Financial_Account__r.Collection_List_Number_1__c = &quot;1076&quot; || Financial_Account__r.Collection_List_Number_1__c = &quot;1077&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002E3dQ&amp;oid=00D1b000000CnQW&quot;, &quot;Fraud&quot;) &amp; &quot; &quot;, &quot;&quot;) 

&amp; 

IF(Financial_Account__r.Bankruptcy_Flag__c = &quot;A&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;B&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;C&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;D&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;T&quot;, IF(Voluntary_Surrender__c, IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002E3dN&amp;oid=00D1b000000CnQW&quot;, &quot;Active Bankruptcy&quot;), IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002E3dO&amp;oid=00D1b000000CnQW&quot;, &quot;Active Bankruptcy-Involuntary Surrender&quot;)) &amp; &quot; &quot;, &quot;&quot;) 

&amp; 

IF(Financial_Account__r.Bankruptcy_Flag__c = &quot;E&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;F&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;H&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;G&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002E3dP&amp;oid=00D1b000000CnQW&quot;, &quot;Discharged Bankruptcy&quot;) &amp; &quot; &quot;, &quot;&quot;) 
&amp; 

IF($User.Id != Case__r.OwnerId, IMAGE( &quot;/servlet/servlet.ImageServer?id=01570000002E3dR&amp;oid=00D1b000000CnQW&quot;, &quot;You are not the owner of the case&quot;) &amp; &quot; &quot;, &quot;&quot;)

&amp; 

IF(TEXT(Financial_Account__r.Finance_Account_Status__c) = &quot;Close&quot;, IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000002E3dS&amp;oid=00D1b000000CnQW&quot;, &quot;Financial account is closed&quot;) &amp; &quot; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Handling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_Jurisdiction__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The state of residence for the primary borrower if in the 50 states, otherwise it is the state of the dealer. The rights letters process follows the laws in the given state. The value is set by the RL Set State Conditions flow.</description>
        <label>State of Jurisdiction</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Constant value of &quot;FileNet&quot; to provide to the Adobe Forms System.</description>
        <formula>&apos;FileNet&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Other_Fees_Description_Trans__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field to pass value of &quot;NA&quot; to Adobe Forms Service if Third Party Other Fee is $0.</description>
        <formula>IF(Third_Party_Other_Fees__c = 0, &quot;NA&quot;, Third_Party_Other_Fees_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Third Party Other Fees Description Trans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Other_Fees_Description__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: A description for the optional/exceptional fee that is entered by the user.</description>
        <label>Third Party Other Fees Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Other_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: An optional fee for the user to enter. May be an exceptional fee that applies only in some states.</description>
        <label>Third Party Other Fees</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Title_City__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The city to which the vehicle title should be sent. Usually it is the auction location.</description>
        <label>Title City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Full_Address__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: The full address to which the vehicle title should be sent. Usually it is the auction location. Used to communicate with title services via a DMS work item (copy &amp; paste).</description>
        <formula>Title_Name__c &amp; &quot;, &quot; &amp; Title_Street1__c &amp; &quot;, &quot; &amp; IF(!ISBLANK(Title_Street2__c), Title_Street2__c &amp; &quot;, &quot;, &quot;&quot;) &amp; Title_City__c &amp; &quot;, &quot; &amp; Title_State__c &amp; &quot; &quot; &amp; Title_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Name__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The name to which the vehicle title should be sent. Usually it is the auction location.</description>
        <label>Title Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: Checkbox to indicate whether the user has selected an alternate title destination different from the auction location provided by United Road. It will also be checked when salvage is indicated. Prevents further overwrites from United Road updates.</description>
        <label>Title Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Phone__c</fullName>
        <label>Title Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_State__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The state to which the vehicle title should be sent. Usually it is the auction location.</description>
        <label>Title State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Street1__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The first line of the street address to which the vehicle title should be sent. Usually it is the auction location.</description>
        <label>Title Street1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Street2__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The second line of the street address to which the vehicle title should be sent. Usually it is the auction location.</description>
        <label>Title Street2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Zip__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: N 
BU: RL 
FD: The zip code to which the vehicle title should be sent. Usually it is the auction location.</description>
        <label>Title Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalRedemptionAmount__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field to calculate the total purchase amount for the vehicle - a payoff in the case of a repossession.</description>
        <formula>UnpaidGrossBalance__c + IF(Financial_Account__r.RecordType.Name = &quot;Retail&quot;, Financial_Account__r.Charges_Late__c, 0) + Repossession_Costs__c + IF(State_of_Jurisdiction__c != &quot;CT&quot;, United_Road_Transport_Fees__c, 0) + Impound_Fee__c + Other_Charges1__c + Other_Charges2__c + IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot;, Sales_Tax_for_Form__c + Financial_Account__r.Security_Deposit_Amount__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Redemption Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalReinstatementAmount__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field to calculate the total amount to resolve all past due balances and fees in the case of repossession.</description>
        <formula>Financial_Account__r.Payment_Amount_Past_Due__c + Financial_Account__r.Charges_Late__c + Repossession_Costs__c + IF(State_of_Jurisdiction__c != &quot;CT&quot;, United_Road_Transport_Fees__c, 0) + Impound_Fee__c + Other_Charges1__c + Other_Charges2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reinstatement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>